offer button works now and some slight changes to the UI for viewapplicants
Former-commit-id: ff513c8caa6e871c9cc7c3b80f26eb9bad4afd57

--- a/src/my-app/src/components/style.css
+++ b/src/my-app/src/components/style.css
@@ -2171,7 +2171,25 @@ body {
   cursor: pointer;
 }
 
+.offer-button {
+  background-color: #95933a;
+  color: white;
+  padding: 8px;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+}
+
 .reject-button {
+  background-color: #b22222;
+  color: white;
+  padding: 8px;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+}
+
+.viewCV-button {
   background-color: #b22222;
   color: white;
   padding: 8px;
