fix: gpt + download_cv + resume parse working
Former-commit-id: a0ea2414abdea001894a71fbc3cb55431d0c040e

--- a/src/my-app/src/components/style.css
+++ b/src/my-app/src/components/style.css
@@ -4117,3 +4117,49 @@ main::after {
 .google-connect-button:hover {
   background-color: #3367d6;
 }
+
+.small-note {
+  font-size: 0.9rem;
+  color: #666;
+  margin-top: 0.25rem;
+}
+
+.cv-edit__header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1rem;
+  margin-left: 400px;
+}
+
+.suggestions {
+  text-align: right;
+}
+
+.small-note {
+  font-size: 0.8rem;
+  color: #666;
+  margin-top: 0.25rem;
+}
+
+.cv-edit__top-bar {
+  display: flex;
+  justify-content: space-between; 
+  align-items: center;
+  margin-bottom: 2rem;
+  width: 100%;
+}
+
+.cv-edit__title {
+  margin: 0;
+}
+
+.suggestions {
+  text-align: right;
+}
+
+.small-note {
+  font-size: 0.8rem;
+  color: #666;
+  margin-top: 0.25rem;
+}
